--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -21,6 +21,9 @@
 
         <div class="mdl-layout-spacer"></div>
 
+        <button class="mdl-button mdl-js-button mdl-button--icon" id="btn_settings" onclick="location.href='../../index.html'">
+          <i class="material-icons">home</i>
+        </button>
         <button class="mdl-button mdl-js-button mdl-button--icon" id="btn_settings" onclick="location.href='../settings/settings.html'">
           <i class="material-icons">settings</i>
         </button>
