--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -76,8 +76,8 @@
   </div>
 
   <script src="../../assets/js/core.main.js"></script>
+  <script src="../../assets/js/core.pageArrayLoader.js"></script>
   <script src="../../assets/js/module.showCurrentClass.js"></script>
-  <script src="../../assets/js/module.pageArrayLoader.js"></script>
   <script defer src="../../assets/js/ui.dashboard.js"></script>
   <script async src="../../libs/material-design-lite@1.3.0/material.min.js"></script>
 </body>
