--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,4 @@
-<!--
-    TODO: (2) Fix caching headers
-    TODO: (3) Add service worker
--->
-<!DOCTYPE html>
+﻿<!DOCTYPE html ⚡>
 <html lang="sk-SK">
 
 <head>
@@ -15,36 +11,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Moderná e-nástenka a informačný systém pre školy zdarma">
     <meta name="og:title" property="og:title" content="Moderná e-nástenka a informačný systém pre školy zdarma">
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org/",
+            "@type": "WebSite",
+            "name": "Gakkō",
+            "alternateName": "Gakko",
+            "url": "https://gakko-webapp.firebaseapp.com/"
+        }
+    </script>
+    <style amp-boilerplate>
+        body {
+            -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+            -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+            -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+            animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+            overflow: hidden
+        }
+
+        @-webkit-keyframes -amp-start {
+            from {
+                visibility: hidden
+            }
+
+            to {
+                visibility: visible
+            }
+        }
+
+        @-moz-keyframes -amp-start {
+            from {
+                visibility: hidden
+            }
+
+            to {
+                visibility: visible
+            }
+        }
+
+        @-ms-keyframes -amp-start {
+            from {
+                visibility: hidden
+            }
+
+            to {
+                visibility: visible
+            }
+        }
+
+        @-o-keyframes -amp-start {
+            from {
+                visibility: hidden
+            }
+
+            to {
+                visibility: visible
+            }
+        }
+
+        @keyframes -amp-start {
+            from {
+                visibility: hidden
+            }
+
+            to {
+                visibility: visible
+            }
+        }
+    </style><noscript>
+        <style amp-boilerplate>
+            body {
+                -webkit-animation: none;
+                -moz-animation: none;
+                -ms-animation: none;
+                animation: none
+            }
+        </style>
+    </noscript>
+    <link rel="canonical" href="https://gakko-webapp.firebaseapp.com/">
     <link rel="stylesheet" href="./libs/material-design-lite@1.3.0/material.min.css">
     <link rel="stylesheet" href="./libs/material-design-icons@3.0.1/material-icons.css">
-    <link rel="stylesheet" href="./assets/css/anim.body.circles.css">
-    <link rel="stylesheet" href="./assets/css/anim.body.fadeIn.css">
-    <link rel="stylesheet" href="./assets/css/ui.index.css">
+    <link rel="stylesheet" href="./assets/css/anim.body.circles.min.css">
+    <link rel="stylesheet" href="./assets/css/anim.body.fadeIn.min.css">
+    <link rel="stylesheet" href="./assets/css/ui.index.min.css">
+    <link rel="preload" as="script" href="https://www.gstatic.com/firebasejs/5.9.0/firebase.js">
+    <link rel="preload" as="script" href="https://www.googletagmanager.com/gtag/js?id=UA-133294265-1">
     <title>Gakkō | moderná e-nástenka a informačný systém pre školy</title>
 </head>
 
 <body>
-    <!-- TODO: Nahradiť s login form -->
-    <dialog class="mdl-dialog text-center">
-        <h4 class="mdl-dialog__title">Prihásenie</h4>
-        <div class="mdl-dialog__content">
-            <p>Pred použitím všetkých funkcii je potrebné sa prihlásiť pomocou vlastných údajov alebo <a>Google účtu</a></p>
-            <hr>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="text" id="input_mail">
-                <label class="mdl-textfield__label" for="input_mail">Mailová adresa</label>
-            </div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="password" id="input_pwd">
-                <label class="mdl-textfield__label" for="input_pwd">Heslo</label>
-            </div>
-        </div>
-        <div class="mdl-dialog__actions">
-            <button type="button" id="btn_login" class="mdl-button">Prihlásiť sa</button>
-            <button type="button" id="btn_register" class="mdl-button" onclick="createUser();">Vytvoriť účet</button>
-        </div>
-    </dialog>
-
     <div class="demo-layout-transparent mdl-layout mdl-js-layout">
         <header class="mdl-layout__header mdl-layout__header--transparent">
             <div class="mdl-layout__header-row">
@@ -61,8 +117,8 @@
                     <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn_spacer-8px"
                         onclick="dora('./pages/dashboard/dashboard.html');">Demo
                     </button>
-                    <button id="show-dialog"
-                        class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect btn_spacer-8px">
+                    <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect btn_spacer-8px"
+                        onclick="dora('./pages/auth/auth.html');">
                         <i class="material-icons icon_button_align-fix">person_outline</i>Prihásenie
                     </button>
                 </nav>
@@ -71,24 +127,21 @@
         <div class="mdl-layout__drawer">
             <span class="mdl-layout-title">Gakkō</span>
             <nav class="mdl-navigation">
-                <a class="mdl-navigation__link">Prihlásenie</a>
+                <a class="mdl-navigation__link" href="./pages/auth/auth.html">Prihlásenie</a>
                 <a class="mdl-navigation__link" href="./pages/dashboard/dashboard.html">Demo</a>
                 <a class="mdl-navigation__link" href="https://github.com/ttomovcik/gakko/wiki">Viac informácií</a>
                 <a class="mdl-navigation__link" href="https://github.com/ttomovcik/gakko">Github</a>
             </nav>
         </div>
         <main class="mdl-layout__content">
-            <div class="text-center">
-                <span id="hero_greeter">
-                    <h1>Gakkō<br>
-                        <h6 style="margin-top: -16px;">Moderná e-nástenka a informačný systém pre školy zdarma</h6>
-                    </h1>
-                    <button id="show-dialog"
-                        class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect btn_spacer-8px"
-                        onclick="dora('https://github.com/ttomovcik/gakko/wiki');">
-                        <i class="material-icons icon_button_align-fix">help_outline</i>Zistiť viac
-                    </button>
-                </span>
+            <div class="text-center" id="hero-greeter">
+                <h1>Gakkō</h1>
+                <h6 style="margin-top: -16px;">Moderná e-nástenka a informačný systém pre školy zdarma</h6>
+                <button id="show-dialog"
+                    class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect btn_spacer-8px"
+                    onclick="dora('https://github.com/ttomovcik/gakko/wiki');">
+                    <i class="material-icons icon_button_align-fix">help_outline</i>Zistiť viac
+                </button>
             </div>
         </main>
     </div>
@@ -106,20 +159,14 @@
             <li></li>
         </ul>
     </div>
-
     <a href="#"
         onclick="document.cookie='cookiebar=;expires=Thu, 01 Jan 1970 00:00:01 GMT;path=/'; setupCookieBar(); return false;">Click
         here to revoke the Cookie consent</a>
-
-    <script type="text/javascript"
+    <script
         src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?theme=white&tracking=1&thirdparty=1&always=1&scrolling=0">
     </script>
-    <script src="https://www.gstatic.com/firebasejs/5.9.0/firebase.js"></script>
-    <script src="https://www.googletagmanager.com/gtag/js?id=UA-133294265-1"></script>
-    <script src="./assets/js/core.main.js"></script>
-    <script src="./assets/js/ui.index.js"></script>
+    <script src="./assets/js/core.main.min.js"></script>
     <script defer src="./libs/material-design-lite@1.3.0/material.min.js"></script>
-
 </body>
 
 </html>
