--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -3,36 +3,30 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet" href="../../libs/material-design-lite@1.3.0/material.min.css">
-<link rel="stylesheet" href="../../libs/material-design-icons@3.0.1/material-icons.css">
-<link rel="stylesheet" href="../../assets/css/ui.dashboard.css">
-<link rel="stylesheet" href="../../assets/css/anim.body.fadeIn.css">
+<link rel="stylesheet" media="screen" href="../../libs/material-design-lite@1.3.0/material.min.css">
+<link rel="stylesheet" media="screen" href="../../libs/material-design-icons@3.0.1/material-icons.css">
+<link rel="stylesheet" media="screen" href="../../assets/css/ui.dashboard.min.css">
+<link rel="stylesheet" media="screen" href="../../assets/css/anim.body.fadeIn.min.css">
 <title>Nástenka</title>
 </head>
 
 <body>
-
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer">
-
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
-
         <span class="mdl-layout-title" id="appTitle">Nástenka<sup>α</sup></span>
-
         <div class="mdl-layout-spacer"></div>
-
-        <button class="mdl-button mdl-js-button mdl-button--icon" id="btn_settings" onclick="location.href='../../index.html'">
+        <button class="mdl-button mdl-js-button mdl-button--icon" onclick="location.href='../../index.html'">
           <i class="material-icons">home</i>
         </button>
-        <button class="mdl-button mdl-js-button mdl-button--icon" id="btn_settings" onclick="location.href='../settings/settings.html'">
+        <button class="mdl-button mdl-js-button mdl-button--icon" id="btn_settings"
+          onclick="location.href='../settings/settings.html'">
           <i class="material-icons">settings</i>
         </button>
         <div class="mdl-tooltip mdl-tooltip--large" for="btn_settings">Nastavenia</div>
-
         <button id="menu_dashboard" class="mdl-button mdl-js-button mdl-button--icon">
           <i class="material-icons">more_vert</i>
         </button>
-
         <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="menu_dashboard">
           <li class="mdl-menu__item" onclick="location.href='../settings/settings.html'">Nastavenia</li>
           <hr>
@@ -42,13 +36,10 @@
             chybu / pripomienku</li>
           <li class="mdl-menu__item" onclick="location.href='https://github.com/ttomovcik/gakko/wiki'">Nápoveda</li>
         </ul>
-
         <nav class="mdl-navigation mdl-layout--large-screen-only">
         </nav>
-
       </div>
     </header>
-
     <div class="mdl-layout__drawer">
       <nav class="mdl-navigation text-center">
         <h3 id="clock">...</h3>
@@ -65,20 +56,16 @@
           data-cloudcolor="#bdbdbd" data-cloudfill="#eeeeee" data-snowcolor="#fafafa">Považská Bystrica</a>
       </nav>
     </div>
-
     <main class="mdl-layout__content">
-
       <div class="page-content" id="content_main">
         <iframe id="iframe_container" src="" title="Website container"></iframe>
       </div>
-
     </main>
   </div>
-
-  <script src="../../assets/js/core.main.js"></script>
+  <script src="../../assets/js/core.main.min.js"></script>
   <script src="../../assets/js/core.pageArrayLoader.js"></script>
-  <script src="../../assets/js/module.showCurrentClass.js"></script>
-  <script defer src="../../assets/js/ui.dashboard.js"></script>
+  <script src="../../assets/js/module.showCurrentClass.min.js"></script>
+  <script defer src="../../assets/js/ui.dashboard.min.js"></script>
   <script async src="../../libs/material-design-lite@1.3.0/material.min.js"></script>
 </body>
 
