--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,13 @@
             }
         </style>
     </noscript>
+    <link rel="manifest" href="./manifest.json">
     <link rel="canonical" href="https://gakko-webapp.firebaseapp.com/">
+    <link rel="preload" as="style" href="./libs/material-design-lite@1.3.0/material.min.css">
+    <link rel="preload" as="style" href="./libs/material-design-icons@3.0.1/material-icons.css">
+    <link rel="preload" as="style" href="./assets/css/anim.body.circles.min.css">
+    <link rel="preload" as="style" href="./assets/css/anim.body.fadeIn.min.css">
+    <link rel="preload" as="style" href="./assets/css/ui.index.min.css">
     <link rel="stylesheet" href="./libs/material-design-lite@1.3.0/material.min.css">
     <link rel="stylesheet" href="./libs/material-design-icons@3.0.1/material-icons.css">
     <link rel="stylesheet" href="./assets/css/anim.body.circles.min.css">
@@ -162,6 +168,15 @@
     <a href="#"
         onclick="document.cookie='cookiebar=;expires=Thu, 01 Jan 1970 00:00:01 GMT;path=/'; setupCookieBar(); return false;">Click
         here to revoke the Cookie consent</a>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker
+                .register('/sw.js')
+                .then(function () {
+                    console.log("Service Worker registered");
+                });
+        }
+    </script>
     <script
         src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?theme=white&tracking=1&thirdparty=1&always=1&scrolling=0">
     </script>
