Reorg kódu, pridaný countdown, opravy chýb

--- a/public/pages/auth/auth.html
+++ b/public/pages/auth/auth.html
@@ -75,9 +75,9 @@
         </style>
     </noscript>
     <script src="../../libs/jquery@3.3.1/jquery-3.3.1.min.js"></script>
-    <script src="../../assets/js/core.auth.js"></script>
-    <script src="../../assets/js/ui.auth.min.js"></script>
-    <link rel="stylesheet" href="../../assets/css/ui.auth.min.css">
+    <script src="../../js/core.auth.js"></script>
+    <script src="../../js/ui.auth.min.js"></script>
+    <link rel="stylesheet" href="../../css/ui.auth.min.css">
     <title>Prihlásenie</title>
 </head>
 
