--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
-﻿<!DOCTYPE html ⚡>
-<html lang="sk-SK">
+﻿<!DOCTYPE html>
+<html lang="sk-SK" ⚡>
 
 <head>
     <meta charset="utf-8">
@@ -79,7 +79,8 @@
                 visibility: visible
             }
         }
-    </style><noscript>
+    </style>
+    <noscript>
         <style amp-boilerplate>
             body {
                 -webkit-animation: none;
@@ -93,14 +94,14 @@
     <link rel="canonical" href="https://gakko-webapp.firebaseapp.com/">
     <link rel="preload" as="style" href="./libs/material-design-lite@1.3.0/material.min.css">
     <link rel="preload" as="style" href="./libs/material-design-icons@3.0.1/material-icons.css">
-    <link rel="preload" as="style" href="./assets/css/anim.body.circles.min.css">
-    <link rel="preload" as="style" href="./assets/css/anim.body.fadeIn.min.css">
-    <link rel="preload" as="style" href="./assets/css/ui.index.min.css">
+    <link rel="preload" as="style" href="./css/anim.body.circles.min.css">
+    <link rel="preload" as="style" href="./css/anim.body.fadeIn.min.css">
+    <link rel="preload" as="style" href="./css/ui.index.min.css">
     <link rel="stylesheet" href="./libs/material-design-lite@1.3.0/material.min.css">
     <link rel="stylesheet" href="./libs/material-design-icons@3.0.1/material-icons.css">
-    <link rel="stylesheet" href="./assets/css/anim.body.circles.min.css">
-    <link rel="stylesheet" href="./assets/css/anim.body.fadeIn.min.css">
-    <link rel="stylesheet" href="./assets/css/ui.index.min.css">
+    <link rel="stylesheet" href="./css/anim.body.circles.min.css">
+    <link rel="stylesheet" href="./css/anim.body.fadeIn.min.css">
+    <link rel="stylesheet" href="./css/ui.index.min.css">
     <link rel="preload" as="script" href="https://www.gstatic.com/firebasejs/5.9.0/firebase.js">
     <link rel="preload" as="script" href="https://www.googletagmanager.com/gtag/js?id=UA-133294265-1">
     <title>Gakkō | moderná e-nástenka a informačný systém pre školy</title>
@@ -120,9 +121,11 @@
                         onclick="dora('https://github.com/ttomovcik/gakko/wiki');">Viac
                         informácií
                     </button>
+                    <!-- Remove demo button if logged in -->
                     <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn_spacer-8px"
                         onclick="dora('./pages/dashboard/dashboard.html');">Demo
                     </button>
+                    <!-- Replace login text with dashboard -->
                     <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect btn_spacer-8px"
                         onclick="dora('./pages/auth/auth.html');">
                         <i class="material-icons icon_button_align-fix">person_outline</i>Prihásenie
@@ -180,7 +183,7 @@
     <script
         src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?theme=white&tracking=1&thirdparty=1&always=1&scrolling=0">
     </script>
-    <script src="./assets/js/core.main.min.js"></script>
+    <script src="./js/core.main.js"></script>
     <script defer src="./libs/material-design-lite@1.3.0/material.min.js"></script>
 </body>
 
