--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" media="screen" href="../../libs/material-design-lite@1.3.0/material.min.css">
 <link rel="stylesheet" media="screen" href="../../libs/material-design-icons@3.0.1/material-icons.css">
-<link rel="stylesheet" media="screen" href="../../assets/css/ui.dashboard.min.css">
-<link rel="stylesheet" media="screen" href="../../assets/css/anim.body.fadeIn.min.css">
+<link rel="stylesheet" media="screen" href="../../css/ui.dashboard.min.css">
+<link rel="stylesheet" media="screen" href="../../css/anim.body.fadeIn.min.css">
 <title>Nástenka</title>
 </head>
 
@@ -62,10 +62,10 @@
       </div>
     </main>
   </div>
-  <script src="../../assets/js/core.main.min.js"></script>
-  <script src="../../assets/js/core.pageArrayLoader.js"></script>
-  <script src="../../assets/js/module.showCurrentClass.min.js"></script>
-  <script defer src="../../assets/js/ui.dashboard.min.js"></script>
+  <script src="../../js/core.main.js"></script>
+  <script src="../../js/core.pageArrayLoader.js"></script>
+  <script src="../../js/module.showCurrentClass.min.js"></script>
+  <script defer src="../../js/ui.dashboard.min.js"></script>
   <script async src="../../libs/material-design-lite@1.3.0/material.min.js"></script>
 </body>
 
