--- a/public/pages/settings/settings.html
+++ b/public/pages/settings/settings.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../libs/material-design-lite@1.3.0/material.min.css">
     <link rel="stylesheet" href="../../libs/material-design-icons@3.0.1/material-icons.css">
-    <link rel="stylesheet" href="../../assets/css/ui.settings.min.css">
+    <link rel="stylesheet" href="../../css/ui.settings.min.css">
     <title>Nastavenia</title>
 </head>
 
@@ -371,8 +371,8 @@
             </div>
         </main>
     </div>
-    <script src="../../assets/js/core.main.min.js"></script>
-    <script src="../../assets/js/ui.settings.min.js"></script>
+    <script src="../../js/core.main.js"></script>
+    <script src="../../js/ui.settings.min.js"></script>
     <script async src="../../libs/material-design-lite@1.3.0/material.min.js"></script>
 </body>
 
